# jax

./: .bazelrc  .bazelversion  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .style.yapf  .tool-versions  .travis.yml  1.txt  2.txt  ADOPTERS.md  AUTHORS  BUILD  BUILD.bazel  CHANGELOG.md  CITATION.bib  CONTRIBUTING.md  CONTRIBUTION_SUMMARY.md  Contributors.md  DETAILS.md  DOCUMENTATION_CONSOLIDATION.md  LICENSE  MODULE.bazel  QR_COMPOSITE_PR_DESCRIPTION.md  README.md  WORKSPACE  autohijax.py  bazel_downloader.cfg  bisect_runner.sh  build.py  build_wheel.py  conftest.py  cse.py  custom_vjps.py  custom_vjps2.py  custom_vjps3.py  djb_build_info.txt  doubledouble.py  (+62 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml  zizmor.yml
benchmarks/: api_benchmark.py  asv.conf.json  bench_linalg.py  benchmark.py  benchmark_object_registration.py  benchmarks_test.py  cache_benchmark.py  control.py  gda_benchmark.py  linalg_benchmark.py  math_benchmark.py  pmap_benchmark.py  random_benchmark.py  shape_poly_benchmark.py  sparse_benchmark.py  tracing_benchmark.py
ci/: .bazelrc  CONTRIBUTING.md  README.md  bisect_runner.sh  build_artifacts.sh  build_oneapi_artifacts.sh  build_rocm_artifacts.sh  copy_logs.sh  parse_wheel_metadata.py  print_bes_link.sh  run_bazel_cuda_targeted_tests.sh  run_bazel_test.sh  run_bazel_test_cpu_py_import_rbe.sh  run_bazel_test_cpu_rbe.sh  run_bazel_test_cuda_non_rbe.sh  run_bazel_test_cuda_non_rbe_py_import.sh  run_bazel_test_cuda_rbe.sh  run_bazel_test_gpu_non_rbe.sh  run_bazel_test_gpu_rbe.sh  run_bazel_test_oneapi.sh  run_bazel_test_rocm_rbe.sh  run_bazel_test_tpu.sh  run_local_wheel_smoke_test.sh  run_pytest.sh  run_pytest_cpu.sh  run_pytest_cuda.sh  run_pytest_gpu.sh  run_pytest_oneapi.sh  run_pytest_rocm.sh  run_pytest_rocm_abort.sh  run_pytest_tpu.sh  upload_rocm_logs.sh
cloud_tpu_colabs/: JAX_NeurIPS_2020_demo.ipynb  JAX_demo.ipynb  JAX_intro_HF_Hackathon_2021.ipynb  Lorentz_ODE_Solver.ipynb  NeurIPS_2019_JAX_demo.ipynb  Pmap_Cookbook.ipynb  README.md  Wave_Equation.ipynb
demo/: setup.py  test.py
design_notes/: custom_derivatives.md  omnistaging.md  prng.md
docs/: CHANGELOG.md  CHANGELOG.rst  Custom_Operation_for_GPUs.md  Custom_Operation_for_GPUs.py  METADATA  README.md  __init__.py  about.md  advanced-autodiff.md  advanced_autodiff.md  advanced_guide.rst  advanced_guides.rst  aot.md  api_compatibility.md  argument_annotations.md  array_refs.ipynb  array_refs.md  array_refs.py  async_dispatch.rst  autodidax.ipynb  autodidax.md  autodidax.py  autodidax11.py  autodidax2_part1.ipynb  autodidax2_part1.md  autodidax2_part1.py  autodidax2_part2.py  autodidax3.py  automatic-differentiation.md  automatic-vectorization.md  beginner_guide.rst  benchmarking.md  buffer_donation.md  build_custom_gpu.sh  building_on_jax.md  changelog.md  complex-differentiation.md  concurrency.rst  conf.py  config_options.rst  (+159 more)
docs/ffi/: CMakeLists.txt  rms_norm.cc
docs/new_docs/401/ffi/: CMakeLists.txt
examples/: BUILD  README.md  __init__.py  advi.py  benchmark_pallas_attention.py  bfgs_method.py  control.py  control_test.py  datasets.py  deep_qlearning_cartpole.py  differentially_private_sgd.py  examples_test.py  fluidsim.py  forward-forward-mnist.py  gaussian_process_regression.py  hmm_em.py  interactive.py  jax2torch.py  kernel_lsq.py  mnist_bench.py  mnist_classifier.py  mnist_classifier_fromscratch.py  mnist_vae.py  newton_method.py  onnx2xla.py  optimizers.py  parallelize_mlp.py  pca_from_scratch.py  physical_optimization.py  resnet50.py  sentiment_analysis.py  spmd_mnist_classifier_fromscratch.py  spmd_spatially_sharded_conv_net.py  tagging.py
examples/ffi/: CMakeLists.txt  README.md  pyproject.toml
examples/ffi/src/jax_ffi_example/: _cpu_examples.pyi  attrs.cc  attrs.py  counter.cc  counter.py  cpu_examples.cc  cpu_examples.py  cuda_e2e.py  cuda_examples.cu  cuda_examples.py  gpu_examples.cc  gpu_examples.py  rms_norm.cc  rms_norm.py
examples/ffi/tests/: attrs_test.py  counter_test.py  cpu_examples_test.py  cuda_e2e_test.py  cuda_examples_test.py  gpu_examples_test.py  rms_norm_test.py
jax/_src/lib/rocm/: BUILD.bazel
jax_plugins/: BUILD.bazel
jax_plugins/cuda/: BUILD.bazel  __init__.py  cuda_plugin_extension.cc  plugin_setup.py  setup.py
jax_plugins/oneapi/: BUILD.bazel  __init__.py  plugin_setup.py  setup.py
jax_plugins/rocm/: BUILD.bazel  __init__.py  plugin_setup.py  setup.py
jaxlib/mlir/: BUILD.bazel  jax.py  symlink_files.bzl
jaxlib/mlir/_mlir_libs/: BUILD.bazel  _jax_mlir_ext.pyi  _mosaic_gpu_ext.pyi  _site_initialize_0.cc  _tpu_ext.pyi  _triton_ext.pyi  jax_dialects.cc  jax_dialects.h  jax_mlir_ext.cc  jaxlib_mlir_capi_shims.cc  jaxlib_mlir_capi_shims.h  mosaic_gpu_ext.cc  mosaic_gpu_ext.pyi  normalize_stubs.py  normalize_stubs.sh  py_jax_passes.cc  register_jax_dialects.cc  stubgen.bzl  stubgen_runner.py  tpu_ext.cc  traceback_to_location.cc  traceback_to_location.h  triton_ext.cc
jaxlib/mlir/_mlir_libs/passes/: BUILD  capi_jax_passes.cc  capi_jax_passes.h  jax_passes.h  jax_passes.td  jax_strip_locations_pass.cc
jaxlib/mlir/utils/: BUILD  mlir_utils.h
jaxlib/oneapi/: BUILD.bazel  oneapi_gpu_runtime.cc  oneapi_gpu_runtime.h  oneapi_plugin_extension.cc
jaxlib/rocm/: BUILD  BUILD.bazel  hip_gpu_kernel_helpers.cc  hip_gpu_kernel_helpers.h  hip_gpu_kernels.cc  hip_linalg.cc  hip_lu_pivot_kernels.cc  hip_lu_pivot_kernels.h  hip_lu_pivot_kernels.hip.cc  hip_prng.cc  hip_prng_kernels.cc  hip_prng_kernels.h  hip_prng_kernels.hip.cc  hipblas.cc  hipblas_kernels.cc  hipblas_kernels.h  hipsolver.cc  hipsolver_kernels.cc  hipsolver_kernels.h  hipsparse.cc  hipsparse_kernels.cc  hipsparse_kernels.h  rocm_plugin_extension.cc  rocm_rpath.bzl  rocm_version.bzl
jaxlib/tools/: BUILD  BUILD.bazel  LICENSE.txt  build_cuda_kernels_wheel.py  build_gpu_kernels_wheel.py  build_gpu_plugin_wheel.py  build_mosaic_wheel.py  build_utils.py  build_wheel.py  build_wheel_test.py  gpu_version_script.lds  rename_wheel.py  wheel_imports_test.py  wheel_size_test.py
(+3143 files in other folders)
